--- a/Wiki/SNES/Robotrek/Enemies.wikitext
+++ b/Wiki/SNES/Robotrek/Enemies.wikitext
@@ -2,190 +2,151 @@
 
 = Robotrek (SNES) - Enemies =
 
-This page documents all enemies in Robotrek.
+This page documents all enemies in Robotrek (USA version).
 
-== Enemy Categories ==
+'''Data Status:''' Enemy names verified from ROM at $01FDBE. Stats are TBD pending research.
 
-* '''Wild''' - Animals and creatures
-* '''Robot''' - Mechanical enemies
-* '''Hacker''' - Human antagonists
-* '''Boss''' - Major story bosses
+== Verified Enemy List (58 enemies) ==
 
-== Normal Enemies ==
-
-=== Chapter 1 (Rococo) ===
+Source: ROM address $01FDBE (null-terminated strings), pointer table at $01FD00
 
 {| class="wikitable sortable"
-! ID !! Name !! HP !! Power !! Guard !! Speed !! EXP !! Gold !! Drops
+! ID !! Hex !! Name !! Category
 |-
-| $01 || Mouse || 20 || 8 || 3 || 12 || 5 || 4 || Scrap1
+| 0 || $00 || Mine || Monster
 |-
-| $02 || Bat || 25 || 10 || 2 || 18 || 6 || 5 || --
+| 1 || $01 || Turbo || Monster
 |-
-| $03 || Rat || 30 || 12 || 4 || 10 || 8 || 8 || Scrap1
+| 2 || $02 || Mushroom || Monster
 |-
-| $04 || Bug || 15 || 6 || 2 || 14 || 4 || 3 || --
+| 3 || $03 || Poison || Monster
 |-
-| $05 || Roach || 35 || 14 || 5 || 16 || 10 || 10 || Antidote
+| 4 || $04 || Spider || Monster
+|-
+| 5 || $05 || Spider || Monster
+|-
+| 6 || $06 || Gel || Monster
+|-
+| 7 || $07 || Gelgel || Monster
+|-
+| 8 || $08 || Bosstoad || Monster
+|-
+| 9 || $09 || Rushbird || Monster
+|-
+| 10 || $0a || Quickbird || Monster
+|-
+| 11 || $0b || Mole || Monster
+|-
+| 12 || $0c || Powermole || Monster
+|-
+| 13 || $0d || Tackler || Monster
+|-
+| 14 || $0e || Plasmoke || Monster
+|-
+| 15 || $0f || Elesmoke || Monster
+|-
+| 16 || $10 || Monk || Monster
+|-
+| 17 || $11 || Mummy || Monster
+|-
+| 18 || $12 || Franken || Monster
+|-
+| 19 || $13 || Ho Ho || Monster
+|-
+| 20 || $14 || Gator || Monster
+|-
+| 21 || $15 || Gunrobot || Robot
+|-
+| 22 || $16 || CannonX || Robot
+|-
+| 23 || $17 || Biolion || Monster
+|-
+| 24 || $18 || Shell || Monster
+|-
+| 25 || $19 || Urchin || Monster
+|-
+| 26 || $1a || Luckstar || Monster
+|-
+| 27 || $1b || Angler || Monster
+|-
+| 28 || $1c || Octopus || Monster
+|-
+| 29 || $1d || Pumpy || Monster
+|-
+| 30 || $1e || Bumpy || Monster
+|-
+| 31 || $1f || Faceman || Monster
+|-
+| 32 || $20 || Bigface || Monster
+|-
+| 33 || $21 || Redpixy || Monster
+|-
+| 34 || $22 || Whitepixy || Monster
+|-
+| 35 || $23 || Goldpixy || Monster
+|-
+| 36 || $24 || Knight || Monster
+|-
+| 37 || $25 || Master || Monster
+|-
+| 38 || $26 || Gagarian || Monster
+|-
+| 39 || $27 || Ninja || Monster
+|-
+| 40 || $28 || Beeper || Monster
+|-
+| 41 || $29 || Cmdr. || Boss
+|-
+| 42 || $2a || Cmdr. || Boss
+|-
+| 43 || $2b || Masker || Monster
+|-
+| 44 || $2c || Beret || Monster
+|-
+| 45 || $2d || Meta Crab || Monster
+|-
+| 46 || $2e || Smallcrab || Monster
+|-
+| 47 || $2f || Mamurana || Monster
+|-
+| 48 || $30 || Big Eye || Monster
+|-
+| 49 || $31 || Blacktank || Robot
+|-
+| 50 || $32 || Gateau || Boss
+|-
+| 51 || $33 || Gateau || Boss
+|-
+| 52 || $34 || Soldier || Monster
+|-
+| 53 || $35 || De Rose || Boss
+|-
+| 54 || $36 || Papamecha || Boss
+|-
+| 55 || $37 || Bugbug || Boss
+|-
+| 56 || $38 || Minicom || Monster
+|-
+| 57 || $39 || Big Fan || Monster
 |}
 
-=== Chapter 2 (Choco) ===
+== Notes ==
 
-{| class="wikitable sortable"
-! ID !! Name !! HP !! Power !! Guard !! Speed !! EXP !! Gold !! Drops
-|-
-| $10 || Slime || 40 || 16 || 6 || 8 || 12 || 15 || Scrap1
-|-
-| $11 || Golem || 80 || 22 || 15 || 5 || 25 || 30 || Scrap2
-|-
-| $12 || Fly Bot || 45 || 18 || 5 || 20 || 15 || 18 || Spring
-|-
-| $13 || Shark Bot || 60 || 20 || 10 || 12 || 20 || 25 || Gear
-|-
-| $14 || Snake || 35 || 15 || 4 || 16 || 12 || 14 || Antidote
-|}
+* There are 58 enemy names total
+* Some names appear twice (Spider, Cmdr., Gateau) - likely variants or different forms
+* Boss names: Cmdr., Gateau, De Rose, Papamecha, Bugbug
+* Robot-type enemies: Gunrobot, CannonX, Blacktank
 
-=== Chapter 3 (Proco) ===
+== Enemy Stats ==
 
-{| class="wikitable sortable"
-! ID !! Name !! HP !! Power !! Guard !! Speed !! EXP !! Gold !! Drops
-|-
-| $20 || Mecha || 100 || 28 || 18 || 10 || 35 || 40 || Scrap2
-|-
-| $21 || Turret || 80 || 35 || 25 || 2 || 40 || 50 || Motor
-|-
-| $22 || Guard Bot || 120 || 30 || 22 || 8 || 50 || 60 || Scrap3
-|-
-| $23 || Spider Bot || 75 || 25 || 15 || 18 || 30 || 35 || Wire
-|-
-| $24 || Hacker1 || 90 || 26 || 12 || 14 || 45 || 55 || Chip
-|}
-
-=== Chapter 4 (Kira) ===
-
-{| class="wikitable sortable"
-! ID !! Name !! HP !! Power !! Guard !! Speed !! EXP !! Gold !! Drops
-|-
-| $30 || Fighter || 150 || 35 || 25 || 15 || 60 || 75 || Scrap3
-|-
-| $31 || Tank || 200 || 40 || 35 || 5 || 80 || 100 || Motor
-|-
-| $32 || Soldier || 130 || 38 || 20 || 18 || 70 || 85 || Gear
-|-
-| $33 || Elite || 180 || 45 || 28 || 16 || 90 || 110 || Celtis
-|-
-| $34 || Hacker2 || 160 || 42 || 22 || 20 || 85 || 95 || Battery
-|}
-
-=== Chapter 5 (Final) ===
-
-{| class="wikitable sortable"
-! ID !! Name !! HP !! Power !! Guard !! Speed !! EXP !! Gold !! Drops
-|-
-| $40 || Death Bot || 250 || 55 || 35 || 18 || 120 || 150 || Scrap3
-|-
-| $41 || Mega Tank || 300 || 60 || 45 || 8 || 150 || 200 || Crystal
-|-
-| $42 || Shadow || 200 || 50 || 30 || 25 || 130 || 160 || Celtis
-|-
-| $43 || Guard X || 280 || 58 || 40 || 15 || 140 || 180 || Chip
-|-
-| $44 || Hacker3 || 220 || 52 || 32 || 22 || 135 || 170 || Graphite
-|}
-
-== Boss Enemies ==
-
-{| class="wikitable sortable"
-! ID !! Name !! HP !! Power !! Guard !! Speed !! EXP !! Gold !! Location
-|-
-| $80 || Mouse King || 200 || 25 || 15 || 10 || 100 || 200 || Rococo Forest
-|-
-| $81 || Mafia Boss || 400 || 35 || 20 || 12 || 200 || 500 || Rococo Hideout
-|-
-| $82 || Blaze || 600 || 45 || 25 || 15 || 350 || 800 || Choco Volcano
-|-
-| $83 || Ghost || 500 || 40 || 30 || 20 || 400 || 700 || Haunted House
-|-
-| $84 || Napoleon || 800 || 55 || 35 || 14 || 500 || 1000 || Proco Castle
-|-
-| $85 || Blackmore || 1000 || 60 || 40 || 16 || 600 || 1200 || Hacker HQ
-|-
-| $86 || De Rose || 1200 || 70 || 45 || 18 || 800 || 1500 || Time Tower
-|-
-| $87 || Gateau || 1500 || 80 || 50 || 12 || 1000 || 2000 || Space Station
-|-
-| $88 || Bugbug || 2000 || 100 || 60 || 20 || 0 || 0 || Final Boss
-|}
-
-== Enemy AI Patterns ==
-
-=== Pattern Types ===
-
-{| class="wikitable"
-! Pattern !! Description !! Used By
-|-
-| Aggressive || Always attack || Mouse, Rat, Fighter
-|-
-| Defensive || Guard when HP < 30% || Golem, Tank, Guard Bot
-|-
-| Support || Heal/buff allies || Hacker1-3
-|-
-| Ranged || Prefer ranged attacks || Turret, Fly Bot
-|-
-| Boss || Complex multi-phase || All bosses
-|}
-
-=== Attack Types ===
-
-{| class="wikitable"
-! Type !! Power Modifier !! Effect
-|-
-| Normal || 100% || Standard damage
-|-
-| Critical || 150% || Ignores some guard
-|-
-| Multi || 75% each || Hits multiple times
-|-
-| Ranged || 90% || No counter-attack
-|-
-| Special || Varies || Status effects
-|}
-
-== Enemy Resistances ==
-
-{| class="wikitable"
-! Type !! Strong Against !! Weak Against
-|-
-| Wild || Ranged || Fire
-|-
-| Robot || Normal || Electric
-|-
-| Hacker || Status || -- 
-|-
-| Boss || Most || Varies
-|}
-
-== Drops Table ==
-
-=== Drop Rate by Enemy Type ===
-
-{| class="wikitable"
-! Enemy Level !! Common (%) !! Rare (%) !! Special (%)
-|-
-| 1-10 || 15 || 3 || --
-|-
-| 11-20 || 20 || 5 || 1
-|-
-| 21-30 || 25 || 8 || 2
-|-
-| 31-40 || 30 || 10 || 3
-|-
-| Boss || 100 || 50 || 25
-|}
+Stats are pending research. The enemy stats table location is unverified.
 
 == Data Structure ==
 
-Each enemy uses 16 bytes:
+Enemy names are stored at ROM offset $01FDBE as null-terminated strings.
+A pointer table at $01FD00 contains 16-bit offsets to each name.
+
+Enemy stats structure (TBD - requires further research):
 
 {| class="wikitable"
 ! Offset !! Size !! Description
@@ -196,25 +157,25 @@ Each enemy uses 16 bytes:
 |-
 | $02 || 2 || HP
 |-
-| $03 || 1 || Power
+| $04 || 1 || Power
 |-
-| $04 || 1 || Guard
+| $05 || 1 || Guard
 |-
-| $05 || 1 || Speed
+| $06 || 1 || Speed
 |-
-| $06 || 2 || EXP
+| $07 || 2 || EXP
 |-
-| $08 || 2 || Gold
+| $09 || 2 || Gold
 |-
-| $0A || 1 || AI Pattern
+| $0B || 1 || AI Pattern
 |-
-| $0B || 1 || Drop ID 1
+| $0C || 1 || Drop ID 1
 |-
-| $0C || 1 || Drop ID 2
+| $0D || 1 || Drop ID 2
 |-
-| $0D || 1 || Drop Rate
+| $0E || 1 || Drop Rate
 |-
-| $0E || 2 || Flags/Resistances
+| $0F || 1 || Flags/Resistances
 |}
 
 [[Category:Data Tables]]
