--- a/Wiki/SNES/Robotrek/RAM_Map.wikitext
+++ b/Wiki/SNES/Robotrek/RAM_Map.wikitext
@@ -232,37 +232,81 @@ Same structure as Robot 1, offset by $100 bytes.
 | $0940-$094F || 16 || Discovered recipes (flags)
 |}
 
-== Save Data Structure (SRAM: $70:0000-$1FFF) ==
+== SRAM Structure (Verified from Data Crystal) ==
+
+'''Source:''' [https://datacrystal.tcrf.net/wiki/Robotrek/RAM_map Data Crystal]
+
+SRAM is 8 KB ($2000 bytes) at $70:0000-$1FFF.
+
+=== File Layout ===
 
 {| class="wikitable"
 ! Offset !! Size !! Description
 |-
-| $0000-$000F || 16 || Save header/checksum
+| $0000 || $100 (256) || Blank (filled with $60)
 |-
-| $0010-$001F || 16 || Play time
+| $0100 || $500 (1280) || '''Save Slot #1'''
 |-
-| $0020-$011F || 256 || Hero data
+| $0600 || $500 (1280) || '''Save Slot #2'''
 |-
-| $0120-$01FF || 224 || Robot 1 data
+| $0B00 || $500 (1280) || '''Save Slot #3'''
 |-
-| $0200-$02DF || 224 || Robot 2 data
+| $1000 || $100 (256) || Blank (filled with $60)
 |-
-| $02E0-$03BF || 224 || Robot 3 data
+| $1100 || $500 (1280) || Backup Slot #1
 |-
-| $03C0-$04FF || 320 || Inventory
+| $1600 || $500 (1280) || Backup Slot #2
 |-
-| $0500-$05FF || 256 || Event/progress flags
-|-
-| $0600-$06FF || 256 || Map state
-|-
-| $0700-$07FF || 256 || Reserved
+| $1B00 || $500 (1280) || Backup Slot #3
 |}
 
-Robotrek supports 4 save slots:
-* Slot 1: $70:0000-$07FF
-* Slot 2: $70:0800-$0FFF
-* Slot 3: $70:1000-$17FF
-* Slot 4: $70:1800-$1FFF
+=== Save Slot Structure ($500 = 1280 bytes) ===
+
+{| class="wikitable"
+! Offset !! Size !! Description
+|-
+| $0000 || $90 (144) || Inventory (72 slots × 2 bytes, slot 0=equipped, slot 71=trash)
+|-
+| $0302 || 1 || Player Facing (0=Down, 1=Up, 2=Left, 3=Right)
+|-
+| $0303 || 2 || Player X-axis position
+|-
+| $0305 || 2 || Player Y-axis position
+|-
+| $0312 || 7 || Player Name (raw)
+|-
+| $031E || 7 || Robot 1 Name (raw)
+|-
+| $0325 || 7 || Robot 2 Name (raw)
+|-
+| $0336 || 7 || Robot 3 Name (raw)
+|-
+| $0342 || 7 || Player Name String (display)
+|-
+| $034E || 7 || Robot 1 Name String (display)
+|-
+| $035A || 7 || Robot 2 Name String (display)
+|-
+| $036D || 7 || Robot 3 Name String (display)
+|-
+| $0388 || 2 || Program Points
+|-
+| $038A || 6 || Robot Current HP (3 × 2 bytes)
+|-
+| $0390 || 6 || Robot Max HP (3 × 2 bytes)
+|-
+| $0396 || 6 || Robot Power (3 × 2 bytes)
+|-
+| $039C || 6 || Robot Guard (3 × 2 bytes)
+|-
+| $03A2 || 6 || Robot Speed (3 × 2 bytes)
+|-
+| $03A8 || 6 || Robot Charge (3 × 2 bytes)
+|-
+| $03E9 || 3 || GP/Gold (hex → decimal conversion)
+|-
+| $04FA || 4 || Checksum
+|}
 
 == Hardware Registers Used ==
 
